--- a/Zostan_scoutem/Scout/templates/players.html
+++ b/Zostan_scoutem/Scout/templates/players.html
@@ -1,13 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h2>Szukaj piłkarzy</h2>
+<form method="POST">
+{{ form.as_p }}
+{% csrf_token %}
+<button type="submit">Szukaj</button>
+</form>
 
-<h1>Lista piłkarzy:</h1>
+<h2>Lista piłkarzy:</h2>
+<!--{{ msg }}-->
 <ul>
     {% for element in players %}
             <li><a href="/player/{{ element.id }}">{{ element.name }}</a></li>
 
             {% endfor %}
+</ul>
+<ul>
+{% for name in result %}
+    <li><a href="/player/{{ name.id }}">{{ name }}</a></li>
+    {% endfor %}
 </ul>
 
 <a href="/add-player">Dodaj piłkarza</a>
