--- a/Zostan_scoutem/Scout/static/css/style.css
+++ b/Zostan_scoutem/Scout/static/css/style.css
@@ -1,12 +1,49 @@
-body {
-    background-color: #f5f5f5;
-	color: black;
-	font-family: 'Lato', sans-serif;
-	font-size: 15px;
-    width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
+* {
+    box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/*body {*/
+    /*background-color: #f5f5f5;*/
+	/*color: black;*/
+	/*font-family: 'Lato', sans-serif;*/
+	/*font-size: 15px;*/
+    /*width: 1200px;*/
+	/*margin-left: auto;*/
+	/*margin-right: auto;*/
+/*}*/
 
 
 
