--- a/Zostan_scoutem/Scout/static/css/style.css
+++ b/Zostan_scoutem/Scout/static/css/style.css
@@ -4,6 +4,9 @@
 
 body {
   margin: 0;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Style the header */
@@ -35,6 +38,34 @@ body {
     color: black;
 }
 
+
+.backnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 10%;
+    background-color: #333;
+    position: fixed;
+    height: 60%;
+    overflow: auto;
+}
+
+.backnav li a {
+    display: block;
+    color: #f2f2f2;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.backnav li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.backnav li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
 /*body {*/
     /*background-color: #f5f5f5;*/
 	/*color: black;*/
