--- a/Zostan_scoutem/Scout/templates/base.html
+++ b/Zostan_scoutem/Scout/templates/base.html
@@ -35,7 +35,7 @@
         <li><a href="/search-club">Szukaj klubu</a></li>
     </div>
 
-    <div style="margin-left:15%;padding:1px 16px;height:100%;">
+    <div style="margin-left:15%;padding:1px 16px;height:100%;background-color: #e4e5ff;">
         {% block content %}
         {% endblock %}
     </div>
