--- a/Zostan_scoutem/Scout/templates/clubs.html
+++ b/Zostan_scoutem/Scout/templates/clubs.html
@@ -12,7 +12,7 @@
         <th scope="col">REPUTACJA</th>
         <th scope="col">STAN FINANSÓW</th>
         <th scope="col">NAZWA STADIONU</th>
-        <th scope="col">POJEMNOŚĆ</th>
+        <th scope="col">POJEMNOŚĆ STADIONU</th>
 
     </tr>
     {% for element in clubs %}
@@ -32,17 +32,7 @@
     {% endfor %}
 
 </table>
-
-
-
-<!--<ul>-->
-    <!--{% for element in clubs %}-->
-            <!--<li><a href="/club/{{ element.id }}">{{ element.name }}</a></li>-->
-
-            <!--{% endfor %}-->
-<!--</ul>-->
-
-
+</div>
 
 
 {% endblock %}
