--- a/Zostan_scoutem/Scout/static/css/style.css
+++ b/Zostan_scoutem/Scout/static/css/style.css
@@ -14,6 +14,7 @@ body {
     background-color: #f1f1f1;
     padding: 20px;
     text-align: center;
+    font-size: 20px;
 }
 
 /* Style the top navigation bar */
