--- a/Zostan_scoutem/Scout/templates/search-club.html
+++ b/Zostan_scoutem/Scout/templates/search-club.html
@@ -7,11 +7,45 @@
 {% csrf_token %}
 <button type="submit">Szukaj</button>
 </form>
+<br>
+<div style="overflow-x:auto;">
+<table id="customers">
+    <tr>
+        <th scope="col">NAZWA</th>
+        <th scope="col">MIASTO</th>
+        <th scope="col">LIGA</th>
+        <th scope="col">ROK ZAŁOŻENIA</th>
+        <th scope="col">REPUTACJA</th>
+        <th scope="col">STAN FINANSÓW</th>
+        <th scope="col">NAZWA STADIONU</th>
+        <th scope="col">POJEMNOŚĆ STADIONU</th>
 
-<ul>
-{% for name in result %}
-    <li><a href="/club/{{ name.id }}">{{ name.name }}</a></li>
+    </tr>
+    {% for element in result %}
+
+    <tr>
+      <td><a href="/club/{{ element.id }}">{{ element.name }}</a></td>
+      <td>{{ element.city }}</td>
+      <td>{{ element.league }}</td>
+      <td>{{ element.year }}</td>
+      <td>{{ element.get_reputation_display }}</td>
+      <td>{{ element.get_money_display }}</td>
+      <td>{{ element.arena_name }}</td>
+      <td>{{ element.arena_capacity }}</td>
+    </tr>
+
+
     {% endfor %}
-</ul>
+
+</table>
+</div>
+
+
+
+<!--<ul>-->
+<!--{% for name in result %}-->
+    <!--<li><a href="/club/{{ name.id }}">{{ name.name }}</a></li>-->
+    <!--{% endfor %}-->
+<!--</ul>-->
 
 {% endblock %}
