--- a/Zostan_scoutem/Scout/templates/base.html
+++ b/Zostan_scoutem/Scout/templates/base.html
@@ -33,6 +33,8 @@
         <li><a href="/add-club">Dodaj klub</a></li>
         <li><a href="/search-player">Szukaj piłkarza</a></li>
         <li><a href="/search-club">Szukaj klubu</a></li>
+        <li><a href="/shortlist">Shortlisty</a></li>
+        <li><a href="/add-shortlist">Dodaj shortlistę</a></li>
     </div>
 
     <div style="margin-left:15%;padding:1px 16px;height:100%;background-color: #e4e5ff;">
