--- a/Zostan_scoutem/Scout/templates/base.html
+++ b/Zostan_scoutem/Scout/templates/base.html
@@ -13,7 +13,7 @@
 
     <div class="header">
         <a class="active" href="/"></a>
-  <h1><a class="active" href="/">Zostań skautem</a></h1>
+  <h1><a class="active" href="/">ZOSTAŃ SKAUTEM</a></h1>
 </div>
 
         <div class="topnav">
