--- a/Zostan_scoutem/Scout/templates/base.html
+++ b/Zostan_scoutem/Scout/templates/base.html
@@ -12,8 +12,11 @@
     <body>
 
     <div class="header">
-        <a class="active" href="/"></a>
-  <h1><a class="active" href="/">ZOSTAŃ SKAUTEM</a></h1>
+
+        <a href="/">
+    <img src="/static/css/head1.jpg" width="782" height="160">
+        </a>
+
 </div>
 
         <div class="topnav">
