--- a/Zostan_scoutem/Scout/static/css/style.css
+++ b/Zostan_scoutem/Scout/static/css/style.css
@@ -12,7 +12,7 @@ body {
 /* Style the header */
 .header {
     background-color: #f1f1f1;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     font-size: 20px;
 }
@@ -22,10 +22,12 @@ body {
     font-size: 40px;
 }
 
+
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
     background-color: #333;
+    /*margin-left: 15%;*/
 }
 
 /* Style the topnav links */
