--- a/Zostan_scoutem/Scout/static/css/style.css
+++ b/Zostan_scoutem/Scout/static/css/style.css
@@ -51,7 +51,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 10%;
+    width: 180px;
     background-color: #333;
     position: fixed;
     height: 60%;
