--- a/Zostan_scoutem/Scout/templates/form.html
+++ b/Zostan_scoutem/Scout/templates/form.html
@@ -1,7 +1,7 @@
-<h4>wypełnij formularz</h4>
+<h4>Wypełnij formularz</h4>
 
 <form method="POST">
 {{ form.as_p }}
 {% csrf_token %}
-<button type="submit">Wyślij</button>
+<button type="submit">Dodaj</button>
 </form>
