--- a/Zostan_scoutem/Scout/templates/shortlistid.html
+++ b/Zostan_scoutem/Scout/templates/shortlistid.html
@@ -31,7 +31,7 @@
           <td>{{ element.weight }}</td>
           <td>{{ element.height }}</td>
           <td>{{ element.paid }}</td>
-          <td><a href="/delete-shortplay/{{ shorty.id }}/{{ element.id }}">usuń {{ element.pk }}</a></td>
+          <td><a href="/delete-shortplay/{{ shorty.id }}/{{ element.id }}">usuń</a></td>
         </tr>
  {% endfor %}
 
